modal UI alignment bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1333,8 +1333,6 @@ input:focus {
   top: 0px;
   width: 100%;
   height: 70px;
-  background: transparent;
-  backdrop-filter: blur(10px);
   z-index: 3;
   user-select: none;
 }
